added creator name to entry/show view

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -10,5 +10,9 @@
   <%= @entry.answer %>
 </p>
 
+<p>
+  CREATED BY: <%= @entry.creator_handle %>
+</p>
+
 <%= link_to 'Edit', edit_entry_path(@entry) %> |
 <%= link_to 'Back', entries_path %>
